2002-07-26  Stefan Kebekus <kebekus@users.sourceforge.net>

	* src/math/matrix3x3.cpp added a few method useful in symmetry
	detection

2002-07-30  Michael Banck <mbanck@gmx.net>

	* src/gaussian.cpp: Last atom was written twice

2002-07-26  Stefan Kebekus <kebekus@users.sourceforge.net>

	* added documentation

2002-07-24  Michael Banck <mbanck@gmx.net>

	* src/gaussian.cpp: Added some comments/warnings; changed multiplicity
	calculation to use abs(charge) instead of charge
	* src/Makefile.in: splitted CXXFLAGS into CXXFLAGS, DEFS and INCS

2002-07-22  Michael Banck <mbanck@gmx.net>

	* src/gaussian.cpp: Fixed WriteGaussianCart() hopefully:
	- calculate charge and mulitiplicty (the latter being quite shakey
	  ATM)
	- do away with the zero after the atom type
	- don't reference coordinates, write them straight after the atom type
	- add a blank line at the end
	* configure.in: Added --enable-doxygen configure option. If enabled,
	search for doxygen and print an URL if not found
	* configure: Updated for new configure.in

2002-07-18  Stefan Kebekus <kebekus@users.sourceforge.net>

	* isolated the 3-dimensional vector and matrix classes, gave them
	less ambigous names, and put them into a directory "math". Added
	an access function to the vector class.

2002-07-12  Stefan Kebekus <kebekus@users.sourceforge.net>
	
	* added documentation to the Vector class, made some functions
	inline, and commented out some methods of the vector class
	whose names I found misleading, and which were never used anyway.

	* src/Vector.cpp, src/Vector.h: added documentation to the Vector
	class, made some functions inline, and commented out some methods
	of the vector class whose names I found misleading, and which were
	never used anyway.
	
	* configure.in: configure now warns if doxygen is not present

	* configure: Updated with autoconf 2.52d.

2002-07-09  Geoff Hutchison <hutchisn@chem.northwestern.edu>

	* src/fileformat.h, src/mol.h, src/binary.h: Fix missing std:: in